fix mistakes with scrollbar in background  in special offers

--- a/css/index.special-offers.partial.css
+++ b/css/index.special-offers.partial.css
@@ -75,7 +75,6 @@
 .product-card__shop-now-button {
   font-size: 13px;
   font-family: "PT Sans", sans-serif;
-  line-height: 15.6px;
   letter-spacing: 0.91px;
   font-weight: bold;
   text-transform: uppercase;
